Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-128781

Setting flat button background colors does not work correctly on Win11

XMLWordPrintable

    • Windows
    • 0b1275f63 (dev), 6e6d42a3b (6.8)

      When running attached project FlatButton.zip on Windows 11, the button background colors are not set correctly as seen in
      FlatButton_Win11_nok.png:

      Button1 background should be green.
      Button2 background should be grey (default).

      On Windows 10, everything is ok, as seen in FlatButton_Win10_ok.png.
      The problem did not exist with Qt5.

        1. FlatButton.zip
          2 kB
          Daniel Frey
        2. FlatButton_Win10_ok.png
          4 kB
          Daniel Frey
        3. FlatButton_Win11_nok-1.png
          6 kB
          Daniel Frey
        For Gerrit Dashboard: QTBUG-128781
        # Subject Branch Project Status CR V

            qt.team.quick.subscriptions Qt Quick and Widgets Team
            daniel_frey Daniel Frey
            Votes:
            4 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes