QWindows11Style: Respect background color for flat QPushButtons

Fixes: QTBUG-128781
Pick-to: 6.8 6.7
Change-Id: I634d42566ea6249b125da537ac7e60fbd8475635
Reviewed-by: Christian Ehrlicher <ch.ehrlicher@gmx.de>